# TRACE

./: .gitignore  .readthedocs.yaml  License.txt  README.md  makefile  pyproject.toml  requirements.txt
TRACE/: __init__.py
benchmarks/: __init__.py
benchmarks/trace_dir/: README.md  actions.py  benchmark.py  review.csv
benchmarks/trace_ufr/: __init__.py  actions.py  benchmark.py
data/extracts/: alibaba_2023_revenue_fy2023.json  alibaba_2023_revenue_q4.json  alphabet_2022_revenue_fy2022.json  alphabet_2022_revenue_q4.json  amazon_2023_revenue_aws_fy2023.json  apple_2022_revenue_fy2022.json  (+408 more)
docs/: actions.md  architecture_backlog.md  benchmarks.md  capsules.md  conf.py  extending.md  framework.md  generation.md  index.md  inference.md  quickstart.md  reporting.md  requirements.txt  templates.md
schemas/: model_fact.json  snippet_template.json  unit_enum.json
scripts/: aggregate_trace_results.py  analyze_trace_metric_correlations.py  collate_trace_ufr_d3_results.py  experiment_run.py  main_run.py  make_croissant_metadata.py  make_trace_experiment_tex_tables.py  parse_low_precision_annotations.py  prepare_trace_ufr_extracts.py  sample_low_precision_audit.py  trace_ufr_generate_rates.py  trace_ufr_list_currencies.py
tests/: support.py  test_action_contracts.py  test_benchmark_contracts.py  test_cli_surface.py  test_compare_parity.py  test_compiler_and_reporting.py  test_core_actions.py  test_core_smoke.py  test_dag_metrics.py  test_generation_profile.py  test_reporting_summary.py  test_runtime_and_validation.py  test_sampler_slots.py  test_trace_dir_benchmark.py
(+1168 files in other folders)
