[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-benchmark"
version = "0.1.0"
description = "TRACE structured action-trace reasoning benchmark framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==2.16.0",
    "anthropic==0.79.0",
    "google-genai==1.62.0",
    "jsonschema==4.26.0",
    "traitlets==5.14.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

